[package]
name = "find-closed-issues"
version = "0.1.0"
edition = "2018"

[dependencies]
async-recursion = "1.0.0"
octocrab = "0.15"
tokio = { version = "1.15.0", features = ["full"] }
regex = "1.5.4"
lazy_static = "1.4.0"
tempdir = "0.3.7"
git2 = "0.13.25"
rayon = "1.5"
walkdir = "2"
tokio-rayon = "2.1.0"
serde_json = "1.0"
serde = { version = "1.0.133", features = ["derive"] }